--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,12 @@ license = "MIT OR Apache-2.0"
 name = "yakf"
 repository = "https://github.com/wangxiaochuTHU/yakf"
 version = "0.1.3"
+exclude = [
+    "target/*",
+    ".gitignore",
+    ".cargo/*",
+    "Cargo.lock",
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
