flatten the export

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 name = "yakf"
 repository = "https://github.com/wangxiaochuTHU/yakf"
-version = "0.1.3"
+version = "0.1.6"
+keywords = ["no-std", "estimation", "kalman filter","ukf"]
+categories = ["science", "science::robotics","navigation"]
 exclude = [
     "target/*",
     ".gitignore",
