--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 categories = ["science", "science::robotics", "navigation"]
-description = "Yet Another Kalman Filter Implementation, as well as, Lie Theory (Lie group, algebra, vector) on SO(3) and SE(3). [no_std] is supported by default."
+description = "Yet Another Kalman Filter Implementation, as well as, Lie Theory (Lie group, algebra, vector) on SO(2), SO(3), SE(2) and SE(3). [no_std] is supported by default."
 edition = "2021"
 exclude = [
   "target/*",
@@ -12,7 +12,7 @@ keywords = ["no-std", "estimation", "filtering", "ukf"]
 license = "MIT OR Apache-2.0"
 name = "yakf"
 repository = "https://github.com/wangxiaochuTHU/yakf"
-version = "0.1.11"
+version = "0.1.12"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
