--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,13 +4,13 @@
 # target = "thumbv7em-none-eabihf"
 
 #[source.crates-io]
-registry = "git://github.com/rust-lang/crates.io-index"
-replace-with = 'ustc'
+# registry = "git://github.com/rust-lang/crates.io-index"
+# replace-with = 'ustc'
 
 # 中国科学技术大学
-[source.ustc]
-registry = "https://mirrors.ustc.edu.cn/crates.io-index"
+# [source.ustc]
+# registry = "https://mirrors.ustc.edu.cn/crates.io-index"
 
 # 上海交通大学
-[source.sjtu]
-registry = "https://mirrors.sjtug.sjtu.edu.cn/git/crates.io-index"
+# [source.sjtu]
+# registry = "https://mirrors.sjtug.sjtu.edu.cn/git/crates.io-index"
